[package]
name = "baskelian_toolbox"
version = "0.3.0"
authors = ["Suprnova <nova@suprnova.dev>"]
description = "A collection of tools to assist in working with DAT files from Baskelian."
readme = "README.md"
repository = "https://github.com/suprnova/baskelian_toolbox"
license = "WTFPL"
edition = "2021"

[dependencies]