[package]
name = "baskelian_toolbox"
version = "0.3.0"
authors = ["Suprnova <nova@suprnova.dev>"]
description = "A collection of tools to assist in working with DAT files from Baskelian."
readme = "README.md"
repository = "https://github.com/suprnova/baskelian_toolbox"
license = "WTFPL"
edition = "2021"

[dependencies]
encoding_rs = "0.8.33"
log = "0.4"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "1.0"
